--- a/app/templates/login/index.jade
+++ b/app/templates/login/index.jade
@@ -16,16 +16,16 @@ block content
             .row
               .col-sm-12
                 .form-group
-                  label Account ID
+                  label.required Account ID
                   input(type="text", placeholder="Account ID", class="form-control")
             .row
               .col-sm-6
                 .form-group
-                  label Username
+                  label.required Username
                   input(type="text", placeholder="Username", class="form-control")
               .col-sm-6
                 .form-group
-                  label Password
+                  label.required Password
                   input(type="password", placeholder="Password", class="form-control")
             hr
             .row
