--- a/app/less/footer.less
+++ b/app/less/footer.less
@@ -1,6 +1,6 @@
 footer {
   margin: 40px 0;
-  padding: 20px 0;
+  padding: 20px 0 40px;
   border-top: 1px solid @borders;
   .copyright {
     color: @darkgrey;
