--- a/app/less/global.less
+++ b/app/less/global.less
@@ -101,7 +101,7 @@ ol.breadcrumb {
     color: @black;
     &:before {
       color: @darkgrey;
-      content: "‣";
+      content: "\02023";
     }
     &:first-child {
       &:before {
