--- a/app/less/help.less
+++ b/app/less/help.less
@@ -62,7 +62,7 @@ ul.help-section {
       padding-left: 40px;
       &:before {
         left: 10px;
-        content: "←";        
+        content: "\02190";        
       }
     }
     &.next {
@@ -71,7 +71,7 @@ ul.help-section {
       padding-right: 40px;
       &:before {
         right: 10px;
-        content: "→";
+        content: "\02192";
       }
     }
   }
