--- a/app/less/website.less
+++ b/app/less/website.less
@@ -3,11 +3,11 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   nav.navbar {
-    background-color: transparent !important;
+    background-color: transparent;
     flex: 1;
     ul.nav.navbar-nav li a {
       color: rgba(255, 255, 255, 0.5);
@@ -32,6 +32,7 @@
     }
   }
   footer {
+    margin-bottom: 0;
     flex: 1;
     border-top: 1px solid rgba(255, 255, 255, 0.25);
     .copyright {
@@ -64,7 +65,7 @@ header.website {
   top: 0;
   left: 0;
   right: 0;
-  padding: 80px 0 100px;
+  padding: 20px 0 40px;
   background-image: url('/assets/images/bg-photo-green.png');
   background-size: cover;
   background-position: 50% 60%;
