--- a/app/templates/homepage/index.jade
+++ b/app/templates/homepage/index.jade
@@ -10,13 +10,13 @@ block content
     .homepage-hero
       .container
         .row
-          .col-sm-8
+          .col-md-8.col-sm-12
             h1 
               div Build Efficient and Reliable
               div: strong TEXT MESSAGING APPS
-              div span for the Lowest Possible Price
+              div for the Lowest Possible Price
             h2 A Simple, Inexpensive SMS/MMS API
-          .col-sm-4
+          .col-md-4.col-sm-12
             .cta
               a(href="#").btn.btn-primary.btn-lg.btn-block Request Free API Key
               br
@@ -24,17 +24,18 @@ block content
                 a(href="/about") or learn more
     .container
       footer
-        .col-sm-6
+        .col-sm-4
           .copyright 
-            span © Copyright 2016
+            span &copy; Copyright 2016
             b Vivial Inc.
-        .col-sm-6
+        .col-sm-8
           ul.list-inline.text-right.footer-links
             li: a(href="#") Terms of Service 
             li: a(href="#") Privacy Policy
             li: a(href="#") Support
             li: a(href="#") Features
+    
 
 block homepage-cta
 
-block footer
+block footer-website
