--- a/app/templates/layout-website.jade
+++ b/app/templates/layout-website.jade
@@ -24,14 +24,14 @@ body
   block homepage-cta
     include includes/_homepage-cta
 
-  block footer
+  block footer-website
     .container
       footer
-        .col-sm-6
+        .col-sm-4
           .copyright 
-            span © Copyright 2016
+            span &copy; Copyright 2016
             b Vivial Inc.
-        .col-sm-6
+        .col-sm-8
           ul.list-inline.text-right.footer-links
             li: a(href="#") Terms of Service 
             li: a(href="#") Privacy Policy
