--- a/app/templates/layout.jade
+++ b/app/templates/layout.jade
@@ -25,11 +25,11 @@ body
 
       block footer
         footer
-          .col-sm-6
+          .col-sm-4
             .copyright 
-              span © Copyright 2016
+              span &copy; Copyright 2016
               b Vivial Inc.
-          .col-sm-6
+          .col-sm-8
             ul.list-inline.text-right.footer-links
               li: a(href="#") Terms of Service 
               li: a(href="#") Privacy Policy
